Fixing form design on mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -563,7 +563,7 @@ text-transform: uppercase;
     display: none;
   }
   .form{
-    width: 80vw;
+    width: 90vw;
   }
   .toggle-menu {
     font-size: 1.1em;
